@@ -19,6 +19,9 @@ package org.graylog2.migrations;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.mongodb.DuplicateKeyException;
+import org.graylog.testing.TestUserService;
+import org.graylog.testing.mongodb.MongoDBFixtures;
+import org.graylog.testing.mongodb.MongoDBInstance;
 import org.graylog2.database.NotFoundException;
 import org.graylog2.plugin.cluster.ClusterConfigService;
 import org.graylog2.plugin.database.ValidationException;
@@ -40,11 +43,11 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 
-import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -55,6 +58,9 @@ import static org.mockito.Mockito.when;
 public class MigrationHelpersTest {
     @Rule
     public final MockitoRule mockitoRule = MockitoJUnit.rule();
+
+    @Rule
+    public final MongoDBInstance mongodb = MongoDBInstance.createForClass();
 
     @Mock
     public UserService userService;
@@ -256,35 +262,21 @@ public class MigrationHelpersTest {
     }
 
     @Test
+    @MongoDBFixtures("duplicated-users.json")
     public void ensureUserWithDuplicates() throws ValidationException {
-        final Permissions permissions = new Permissions(ImmutableSet.of());
-        final User existingUser = newUser(permissions);
-        existingUser.setName("test-user");
-        existingUser.setFirstLastFullNames("Test", "User");
-        existingUser.setPassword("password");
-        existingUser.setEmail("test@example.com");
-        existingUser.setTimeZone(DateTimeZone.UTC);
-        existingUser.setRoleIds(ImmutableSet.of()); // Set invalid role IDs so the user gets updated
 
-        when(userService.load("test-user"))
-                .thenThrow(UserServiceImpl.DuplicateUserException.class)
-                .thenReturn(existingUser);
-        when(userService.save(any(User.class))).thenReturn("new-id");
+        final TestUserService testUserService = new TestUserService(mongodb.mongoConnection());
+        migrationHelpers = new MigrationHelpers(roleService, testUserService);
 
-        List duplicates = new ArrayList();
-        duplicates.add(existingUser);
-        duplicates.add(existingUser);
-        List single = new ArrayList();
-        single.add(existingUser);
-        when(userService.loadAllByName("test-user")).thenReturn(duplicates, single);
+        assertThat(testUserService.loadAll()).hasSize(2);
+        assertThatThrownBy(() -> testUserService.load("test-user")).isInstanceOf(UserServiceImpl.DuplicateUserException.class);
 
         assertThat(migrationHelpers.ensureUser("test-user", "pass", "Test", "User",
-                "test@example.com", ImmutableSet.of("54e3deadbeefdeadbeef0001",
-                        "54e3deadbeefdeadbeef0002")))
-                .isEqualTo("new-id");
+                "test@example.com", Set.of()))
+                .isEqualTo("5b8e4ef17ad37b64ee87eb57");
 
-        final ArgumentCaptor<User> userArg = ArgumentCaptor.forClass(User.class);
-        verify(userService, times(2)).save(userArg.capture());
+        assertThat(testUserService.load("test-user")).isNotNull();
+        assertThat(testUserService.loadAll()).hasSize(2);
     }
 
     private User newUser(Permissions permissions) {
